--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_patient.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_patient.xml
@@ -140,7 +140,13 @@
         android:id="@+id/pokusneTlacitko"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/roundcorner32"
+        android:padding="16dp"
+        android:text="@string/p_idat_pacienta"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
