--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy2.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy2.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="therapy"
+            type="com.example.aplikace_rehabilitace.database.TherapySettings"
+            />
+        <variable
+            name="setTherapy2ViewModel"
+            type="com.example.aplikace_rehabilitace.ui_.therapy_settings.SetTherapy2ViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -88,7 +98,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/colorBlack"
             android:buttonTint="@color/colorBlue"
-            android:checked="true"
+            android:checked="false"
             android:drawableTint="@color/colorBlack"
             android:foregroundTint="@color/colorBlack"
             android:text="1×"
@@ -144,3 +154,4 @@
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
