--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_therapy.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_therapy.xml
@@ -31,7 +31,8 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/roundcorner32"
+            android:background="@drawable/roundcorner32_gray"
+            android:enabled="false"
             android:fontFamily="@font/roboto"
             android:padding="16dp"
             android:paddingStart="24dp"
@@ -44,8 +45,8 @@
 
         <ImageButton
             android:id="@+id/btnAddNewPatient"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/roundcorner16"
