--- a/Aplikace_rehabilitace/app/src/main/res/layout/item_user.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/item_user.xml
@@ -19,7 +19,8 @@
     android:background="@drawable/round_yellow_16"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:onClick="@{() -> clickListener.onClick(patient)}">
+    android:onClick="@{() -> clickListener.onClick(patient)}"
+    app:patientSelected="@{patient}">
 
 
     <TextView
