--- a/Aplikace_rehabilitace/app/src/main/res/layout/item_exercise_position.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/item_exercise_position.xml
@@ -40,7 +40,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:background="@android:color/transparent"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
